--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "only": "0.0.2",
     "view-helpers": "~0.1.5",
     "winston": "~2.4.0",
-    "body-parser": "^1.7.0",
+    "body-parser": "^1.7.0"
   }
 }
