--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "forever": "~0.15.1",
     "jade": "^1.11.0",
     "method-override": "~2.3.5",
+    "mongo": "^0.1.0",
     "mongoose": "^4.10.8",
     "morgan": "~1.9.0",
     "multer": "~1.3.0",
